Customize site config content

--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ utility_coordinator:
   email: victoria.razo@austintexas.gov
   phone: 5124044226
 security_coordinator:
-  name: David Ortiz
-  email: David.Ortiz@austintexas.gov
-  phone: 5124044071
+  name: Travis Wauneka
+  email: travis.wauneka@austintexas.gov
+  phone: 5124044104
 sales_manager:
   name: Tina Travers, CMP
   email: tina.travers@austintexas.gov
