--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ preliminary_floor_plan_deadline: 2024-09-10
 digital_sign_submission_deadline: 2024-09-26
 incentive_rate_deadline: 2024-09-10
 event_coordinator:
-  name: Kerrie DiCapua
-  email: kerrie.dicapua@austintexas.gov
-  phone: 5124044211
+  name: Lily Harris
+  email: Lily.Harris@austintexas.gov
+  phone: 5124044209
 utility_coordinator:
   name: Victoria Razo-Dobney
   email: victoria.razo@austintexas.gov
